--- a/index.html
+++ b/index.html
@@ -11,8 +11,21 @@
 
     </head>
     <body>
-            <div id="movies"></div>
-                    
+            <div class="card">
+                    <div class="card-header" id="headingThree">
+                      <h5 class="mb-0">
+                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                          Collapsible Group Item #3
+                        </button>
+                      </h5>
+                    </div>
+                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                      <div class="card-body">
+                            <div id="movies"></div>
+                      </div>
+                    </div>
+                  </div>               
+       
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="assets/bootstrap-4.1.3-dist/js/bootstrap.bundle.js"></script>
         <script src="assets/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
