--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="assets/bootstrap-4.1.3-dist/js/bootstrap.bundle.js"></script>
         <script src="assets/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-        <script src="src/JS/app.js"></script>
+        <script src="src/JS/model/model.js"></script>
+        <script src="src/JS/controller/controller.js"></script>
+        <script src="src/JS/view/view.js"></script>
     </body>
 </html>
