--- a/index.html
+++ b/index.html
@@ -5,27 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="/assets/bootstrap-4.1.3-dist/css/bootstrap.min.css">
-        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
         <link href="/assets/CSS/main.css" rel="stylesheet">
         <title>Movie database</title>
 
     </head>
     <body>
-            <div class="card">
-                    <div class="card-header" id="headingThree">
-                      <h5 class="mb-0">
-                        <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                          Collapsible Group Item #3
-                        </button>
-                      </h5>
-                    </div>
-                    <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                      <div class="card-body">
-                            <div id="movies"></div>
-                      </div>
-                    </div>
-                  </div>               
-       
+      <div class="container">
+        <header>
+           <button onclick="renderMovies()"><i class="fas fa-bars"></i></button>
+        </header>
+        <main>
+              <div id="movies"></div> 
+        </main>
+      </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="assets/bootstrap-4.1.3-dist/js/bootstrap.bundle.js"></script>
         <script src="assets/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
