--- a/index.html
+++ b/index.html
@@ -12,12 +12,16 @@
     </head>
     <body>
       <div class="container">
-        <header>
-           <button onclick="renderMovies()"><i class="fas fa-bars"></i></button>
-        </header>
-        <main>
-              <div id="movies"></div> 
-        </main>
+            <p class="header p-3 mb-2 bg-danger ">
+                <a class="btn text-white" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    <i class="fas fa-bars"></i>   
+                </a>
+            </p>
+              <div class="collapse" id="collapseExample">
+                <div class="card card-body">
+                    <div id="movies"></div>
+                </div>
+              </div>
       </div>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="assets/bootstrap-4.1.3-dist/js/bootstrap.bundle.js"></script>
