--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </head>
     <body>
       <div class="container">
-            <p class="header p-3 mb-2 bg-danger ">
+            <p class=" row header p-3 mb-2 bg-danger">
                 <a class="btn text-white" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                     <i class="fas fa-bars"></i>   
                 </a>
