--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="stylesheet" href="./assets/bootstrap-4.1.3-dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-        <link href="/assets/CSS/main.css" rel="stylesheet">
+        <link href="./assets/CSS/main.css" rel="stylesheet">
         <title>Movie database</title>
 
     </head>
@@ -26,8 +26,8 @@
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="./assets/bootstrap-4.1.3-dist/js/bootstrap.bundle.js"></script>
         <script src="./assets/bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-        <script src="src/JS/model/model.js"></script>
-        <script src="src/JS/controller/controller.js"></script>
-        <script src="src/JS/view/view.js"></script>
+        <script src="./src/JS/model/model.js"></script>
+        <script src="./src/JS/controller/controller.js"></script>
+        <script src="./src/JS/view/view.js"></script>
     </body>
 </html>
